--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="black_overlay">#66000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sea_green">#519387</color>
-    <color name="account_background">#3DB4B3</color>
+    <color name="account_background">#519387</color>
     <color name="normal_timer_color">#30A09D</color>
     <color name="warning_timer_color">#A94442</color>
     <color name="notification_badge">#FF4829</color>
