--- a/app/src/main/res/layout/badge.xml
+++ b/app/src/main/res/layout/badge.xml
@@ -18,15 +18,16 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_alignParentTop="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentEnd="true"
     android:layout_marginRight="10dp"
     android:layout_marginEnd="5dp"
     android:layout_marginTop="5dp"
-    android:text=" 1000 "
+    tools:text=" 1000 "
     android:minWidth="30dp"
     android:textColor="#FFF"
     android:textSize="16sp"
     android:textStyle="bold"
-    android:background="@drawable/notification_background"/>
+    android:background="@drawable/notification_background" />
