--- a/app/src/main/res/layout/delete.xml
+++ b/app/src/main/res/layout/delete.xml
@@ -17,6 +17,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +28,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/delete_summary" />
+            android:text="@string/delete_confirmation_message" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,7 +50,30 @@
                 android:layout_height="48dp"
                 android:layout_marginLeft="8dp"
                 android:orientation="vertical">
-                <include layout="@layout/titles" />
+                <TextView
+                    android:id="@+id/issuer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="4dp"
+                    android:ellipsize="end"
+                    android:gravity="left|center"
+                    android:singleLine="true"
+                    tools:text="example@example.com"
+                    android:textColor="@android:color/primary_text_light"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="left|center"
+                    android:singleLine="true"
+                    tools:text="eb40924b-1d13-4807-9a76-30eb7ffa7eba"
+                    android:textColor="@android:color/secondary_text_light"
+                    android:textSize="12sp"
+                    android:textStyle="normal" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -66,7 +90,7 @@
         <Button
             style="@style/Dialog.Button"
             android:id="@+id/delete"
-            android:text="@string/delete"
+            android:text="@string/title_menu_item_delete"
             />
     </LinearLayout>
 </LinearLayout>
