--- a/app/src/main/res/layout/identitycell.xml
+++ b/app/src/main/res/layout/identitycell.xml
@@ -46,7 +46,7 @@
             android:ellipsize="end"
             android:gravity="left|center"
             android:singleLine="true"
-            android:text="ForgeRock"
+            tools:text="ForgeRock"
             android:textColor="@android:color/primary_text_light"
             android:textSize="16sp"
             android:textStyle="bold" />
