--- a/app/src/main/res/layout/mechanismicon.xml
+++ b/app/src/main/res/layout/mechanismicon.xml
@@ -41,7 +41,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:text="10"
+        tools:text="10"
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
