--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -36,7 +36,7 @@
             android:layout_marginLeft="30dp"
             android:textStyle="bold"
             android:textSize="18dp"
-            android:text="Settings" />
+            android:text="@string/title_activity_settings" />
         <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -46,7 +46,7 @@
             android:layout_marginBottom="30dp"
             >
             <TextView
-                android:text="Enable camera"
+                android:text="@string/enable_camera"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="50dp"
                 android:layout_alignParentLeft="true"
@@ -77,7 +77,7 @@
             android:layout_marginLeft="30dp"
             android:textStyle="bold"
             android:textSize="18dp"
-            android:text="Other" />
+            android:text="@string/settings_other_title" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -87,7 +87,7 @@
             android:layout_marginBottom="30dp">
             <Button
                 android:id="@+id/clear_notifications_button"
-                android:text="Clear notification history"
+                android:text="@string/settings_clear_notification_history"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
 
             <Button
                 android:id="@+id/about_button"
-                android:text="About this app"
+                android:text="@string/settings_about"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
