--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -22,12 +22,12 @@
         android:id="@+id/action_scan"
         android:icon="@drawable/forgerock_icon_qr"
         android:showAsAction="ifRoom"
-        android:title="@string/scan_qr_code" />
+        android:title="@string/title_menu_item_scan_qr_code" />
 
     <item
         android:id="@+id/action_about"
         android:showAsAction="never"
-        android:title="About" />
+        android:title="@string/title_menu_item_about" />
 
 </menu>
 
