--- a/app/src/main/res/menu/oath.xml
+++ b/app/src/main/res/menu/oath.xml
@@ -20,11 +20,11 @@
     <item
         android:id="@+id/action_copy"
         android:icon="@drawable/ic_content_copy"
-        android:title="@string/delete"
+        android:title="@string/title_menu_item_copy"
         />
     <item
         android:id="@+id/action_delete"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/delete"
+        android:title="@string/title_menu_item_delete"
         />
 </menu>
