--- a/app/src/main/res/menu/push.xml
+++ b/app/src/main/res/menu/push.xml
@@ -20,6 +20,6 @@
     <item
         android:id="@+id/action_delete"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/delete"
+        android:title="@string/title_menu_item_delete"
         />
 </menu>
