--- a/app/src/main/res/layout/mechanism.xml
+++ b/app/src/main/res/layout/mechanism.xml
@@ -70,16 +70,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/light_gray"
         >
-
-        <!--<TextView-->
-            <!--android:id="@android:id/empty"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:padding="8dp"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/no_mechanisms"-->
-            <!--/>-->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -95,6 +87,7 @@
             android:stretchMode="columnWidth"
             android:verticalSpacing="1dp"
             tools:layout_height="80dp"
+            android:background="@color/light_gray"
             />
     </LinearLayout>
 </LinearLayout>
