--- a/app/src/main/res/layout/notifications.xml
+++ b/app/src/main/res/layout/notifications.xml
@@ -20,7 +20,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/light_gray">
 
     <TextView
         android:id="@+id/empty"
