--- a/app/src/main/res/layout/oathcell.xml
+++ b/app/src/main/res/layout/oathcell.xml
@@ -68,7 +68,7 @@
         android:layout_marginLeft="60dp">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
@@ -79,7 +79,7 @@
 
         <TextView
             android:id="@+id/code"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
